# TracePost-larvaeChain

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOCKER_README.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  nginx.conf
back-end/: .env.example  .gitignore  API.md  Dockerfile  HELP.md  README.md  alembic.ini  docker-compose.yml  go.mod  go.sum  main.go  note.md  pyproject.toml  requirements.txt
back-end/alembic/: README  env.py  script.py.mako
back-end/analytics/: analytics.go
back-end/api/: admin.go  admin_analytics.go  admin_analytics_test.go  admin_test.go  alliance.go  analytics.go  analytics_api.go  api.go  auth.go  baas.go  batch.go  blockchain_api.go  company.go  compliance.go  environment.go  event.go  exporter.go  farmer.go  geo.go  handlers.go  hatch.go  identity.go  interoperability.go  nft.go  processor.go  qr_api.go  qr_code.go  qr_diagnostics.go  scaling.go  shipment.go  supplychain.go  zkp.go
back-end/app/: config.py  db_connection_fix.py  main.py
back-end/blockchain/: analytics.go  anomaly_detection.go  azure_blockchain.go  baas.go  blockchain.go  consensus.go  cosmos_interop.go  ddi_client.go  gs1_epcis.go  hsm.go  hyperledger_fabric.go  ibm_blockchain.go  identity.go  interop_upgrades.go  interoperability.go  polkadot_interop.go  pos.go  sharding.go  ssi.go  w3c_did.go  zkp.go
back-end/components/: email.go  language_selector.go
back-end/config/: baas-config.json  baas.go  config.go
back-end/contracts/: AccessValidator.sol  DDIPermissionRegistry.sol  (+2 more)
back-end/db/: db.go  (+2 more)
(+225 files in other folders)
