# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "blockchain-logistics-traceability"
version = "1.0.0"
description = "Blockchain-based tracking system for logistics operations"
authors = ["VieChains Team <info@viechains.com>"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"